src/objects/Vendors__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_history__c</fullName>
        <label>Contact history</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_name__c</fullName>
        <label>Contact name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_conditions__c</fullName>
        <label>Payment conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <label>Vendors</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>